# soma

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.module  aclocal.m4  config.h.in  configure  configure.ac  mkinstalldirs  palinsesto.cfg.5  palinsesto.cfg_example  soma-config.1  soma-xml-palinsesto.dtd  soma-xml-spot.dtd  soma.cfg.5  soma.cfg_example  somacheck.1  somaclient.1  somad.1  somad_crash.py  spot.cfg.5  spot.cfg_example
check/: Makefile.am  Makefile.in  check.h  fatal.c  host.c  main.c  palinsesto.c  spot.c  time.c
client/: Makefile.am  Makefile.in  client.h  cmd.c  main.c  other.c  rl.c  shell.c  time.c
config/: Makefile.am  Makefile.in  soma-config.c  soma-config.c.in
confuse/: Makefile.am  Makefile.in  confuse.c  confuse.h  lexer.c
daemon/: Makefile.am  Makefile.in  build.c  data.c  denyallow.c  distribuited.c  echo.c  file.c  list_item.c  list_pl.c  log.c  main.c  module.c  nextitem.c  options.c  palinsesto.c  pid.c  play.c  playlist.c  signal.c  socket.c  somad.h  spot.c  start.c  stat.c  string.c
ffmpeg/: Makefile.in
ffmpeg/ffmpeg/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
ffmpeg/ffmpeg/doc/: Makefile.am  Makefile.in
ffmpeg/ffmpeg/libavcodec/: Makefile.am  Makefile.in  dct-test.c  fft-test.c  h263.c  imgresample.c  mem.c  mjpeg.c  motion_test.c
ffmpeg/ffmpeg/libavcodec/alpha/: Makefile.am  Makefile.in  dsputil_alpha.c  motion_est_alpha.c  mpegvideo_alpha.c  simple_idct_alpha.c
ffmpeg/ffmpeg/libavcodec/armv4l/: Makefile.am  Makefile.in  dsputil_arm.c  mpegvideo_arm.c
ffmpeg/ffmpeg/libavcodec/i386/: Makefile.am  Makefile.in  cputest.c  dsputil_mmx.c  fdct_mmx.c  fft_sse.c  h264dsp_mmx.c  idct_mmx.c  idct_mmx_xvid.c  motion_est_mmx.c  mpegvideo_mmx.c  simple_idct_mmx.c  vp3dsp_mmx.c
ffmpeg/ffmpeg/libavcodec/liba52/: Makefile.am  Makefile.in  a52.h  resample.c
ffmpeg/ffmpeg/libavcodec/libpostproc/: Makefile.am  Makefile.in
ffmpeg/ffmpeg/libavcodec/mlib/: Makefile.am  Makefile.in  dsputil_mlib.c
ffmpeg/ffmpeg/libavcodec/ppc/: Makefile.am  Makefile.in  dsputil_altivec.c  dsputil_ppc.c  fdct_altivec.c  fft_altivec.c  gmc_altivec.c  idct_altivec.c  mpegvideo_altivec.c  mpegvideo_ppc.c
ffmpeg/ffmpeg/libavcodec/ps2/: Makefile.am  Makefile.in  dsputil_mmi.c  idct_mmi.c  mpegvideo_mmi.c
ffmpeg/ffmpeg/libavcodec/sh4/: Makefile.am  Makefile.in  dsputil_align.c  dsputil_sh4.c  idct_sh4.c
ffmpeg/ffmpeg/libavcodec/sparc/: Makefile.am  Makefile.in
ffmpeg/ffmpeg/libavformat/: Makefile.am  Makefile.in  grab.c  oggparsevorbis.c
ffmpeg/ffmpeg/libavutil/: Makefile.am  Makefile.in
ffmpeg/ffmpeg/tests/: Makefile.am  Makefile.in
ffmpeg/ffmpeg/vhook/: Makefile.am  Makefile.in
ghthash/: Makefile.am  Makefile.in  ght_hash_table.h  hash_functions.c  hash_table.c
include/: Makefile.am  Makefile.in  code.h  commons.h  controller.h  local.h  module.h  soma.h
lib/: Makefile.am  Makefile.in  filesystem.c  init.c  libsoma.h  lists.c  local.c  main.c  nextitem.c  palinsesto.c  simple.c  spot.c  stat.c
phpsoma/: Makefile.am  Makefile.in  README  config.m4  php.c  test.php
pysoma/: Makefile.am  Makefile.in  README  python.c  setup.py  setup.py.in  test.py
sm/: Makefile.am  Makefile.in  sm.c  sm.h
